# varjo-ar-guidance

./: .gitignore  CMakeLists.txt  README.md
Common/: DataStreamer.cpp  DataStreamer.hpp
include/: Varjo_datastream.h  Varjo_version_defines.h
include_experimental/: Varjo_mr_experimental.h
proto/: frame.proto  frame_pb2.py
src/: AppLogic.cpp  AppLogic.hpp  AppState.hpp  AppView.cpp  DepthManager.cpp  DepthManager.hpp  MRScene.cpp  ProtobufFrameSerializer.cpp  ProtobufFrameSerializer.hpp  ZmqSender.cpp  ZmqSender.hpp  frame_pb2.py  half.cpp  half.h  main.cpp  omnidir.cpp  reciever.py  rectifysrc
src/CamParams/: dispDat.yml  extrinsics.yml  intrinsics.yml  sgbmdat.yml
